--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "notesy application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.5.3",
     "minimist": "^1.2.5"
   }
 }
