--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.5.3",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.10.9"
   }
 }
