--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/401-advanced-javascript-sararussert/notes#readme",
   "dependencies": {
+    "@code-fellows/supergoose": "^1.0.11",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.5.3",
